--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.3.3",
+    "mongoose": "^5.0.15",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
