--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "jsonwebtoken": "^8.2.1"
+    "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
